--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Your Task",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.16.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
