--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "ErinMS",
   "license": "MIT",
   "dependencies": {
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
