--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "4.16.4",
+    "express-handlebars": "^7.1.2",
     "moment": "^2.30.1",
     "uuid": "^9.0.1"
   },
